--- a/Ecommerce.csproj
+++ b/Ecommerce.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
     <ItemGroup>
         <!-- Driver chính thức mới nhất cho MongoDB -->
+        <PackageReference Include="AspNetCore.Identity.MongoDbCore" Version="3.1.2" />
         <PackageReference Include="MongoDB.Driver" Version="2.25.0" />
         <PackageReference Include="payOS" Version="1.0.9" />
     </ItemGroup>
