--- a/Ecommerce.csproj
+++ b/Ecommerce.csproj
@@ -12,4 +12,7 @@
         <PackageReference Include="MongoDB.Driver" Version="2.25.0" />
         <PackageReference Include="payOS" Version="1.0.9" />
     </ItemGroup>
+    <ItemGroup>
+      <Folder Include="wwwroot\img\" />
+    </ItemGroup>
 </Project>
